menu og artikeltemplates

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,16 @@
 baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+languageCode = "da-dk"
+title = "Min Hugoside"
 theme = "cocoa"
+
+[[menu.main]]
+name               	= "Home"
+weight             	= -201
+identifier         	= "home"
+url                	= "/"
+
+[[menu.main]]
+name               	= "Blog"
+weight             	= -101
+identifier         	= "blog"
+url                	= "/blog/"
